changed navbar to fixed top, and added collapsed function to it

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -11,7 +11,9 @@ body{
 h1 {
 	font-family: 'Ovo', serif;
 }
-
+.content {
+  padding-top: 10em;
+}
 .undecorated-link:hover {
 	text-decoration: none;
 }
@@ -63,6 +65,9 @@ h1 {
 	color: #FF5252;
 }
 @media screen and (min-width:0px) and (max-width:740px) {
+  .content {
+    padding-top: 5em;
+  }
 	.footer {
 		background-position: top right;
 		height: 150px;
